Implemented SessionProvider for sending mail

--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,14 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+	</dependencies>
+
 	<reporting>
 		<plugins>
 			<plugin>
