--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>4.0.2</version>
+		</dependency>
 	</dependencies>
 
 	<reporting>
