--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.dardan.rrafshi</groupId>
+			<artifactId>commons</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+	
+		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
 			<version>1.4.7</version>
