--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,16 @@
 
 	<groupId>com.dardan.rrafshi</groupId>
 	<artifactId>mail</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
-	<name>mail</name>
+	<name>jMail</name>
 	<description>A module for sending emails with java</description>
-	<url>https://github.com/DonColon/mail</url>
+	<url>https://github.com/DonColon/jMail</url>
 
 	<developers>
 		<developer>
 			<name>Dardan Rrafshi</name>
-			<email>drrafshi@hotmail.de</email>
+			<email>dardan.rrafshi@gmail.com</email>
 			<roles>
 				<role>developer</role>
 			</roles>
@@ -24,9 +24,22 @@
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
-			<url>https://github.com/DonColon/${project.name}/blob/master/LICENSE</url>
+			<url>https://github.com/DonColon/jMail/blob/master/LICENSE</url>
 		</license>
 	</licenses>
+
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/DonColon/jMail/issues</url>
+	</issueManagement>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub DonColon Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/doncolon/maven</url>
+		</repository>
+	</distributionManagement>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,9 +51,9 @@
 		<dependency>
 			<groupId>com.dardan.rrafshi</groupId>
 			<artifactId>commons</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>1.2.0</version>
 		</dependency>
-	
+		
 		<dependency>
 			<groupId>javax.mail</groupId>
 			<artifactId>mail</artifactId>
